pkg/gox/testdata/errors/invalid_component_prop.gox
package demo

func View() any {
	return <Button bad-prop="x" />
}
